--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "sinon": "4.1.1",
     "sinon-chai": "2.14.0",
     "snazzy": "7.0.0",
-    "source-map-support": "0.5.0",
+    "source-map-support": "0.5.9",
     "standard": "10.0.3",
     "stryker": "0.12.0",
     "stryker-api": "0.10.0",
@@ -113,5 +113,7 @@
     "travis-lint": "1.0.0",
     "yaml-lint": "1.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "source-map-support": "0.5.9"
+  }
 }
