Fix #3 - Add better support for requireing the package
Make it so that when using `require` to include the package (as opposed to babel-transpiled
`import` statements), the ExtrinsicPromise class is available as the result of the
call, rather than just as the `default` property on that result.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "compile-prod": "npm-run-all compile-prod:* compile:*",
     "compile-dev": "npm-run-all compile-dev:* compile:*",
     "compile": "if-env NODE_ENV=production && npm run compile-prod || npm run compile-dev",
-    "build": "npm-run-all clean verify compile"
+    "build": "npm-run-all clean compile verify"
   },
   "author": "Brian Mearns",
   "homepage": "https://github.com/mearns/extrinsic-promises",
