--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ matrix:
       - node_js: node
         env:  NODE_ENVIRONMENT=development BUILD_STEPS='compile test'
         os: osx
+      - node_js: 10
+        env:  NODE_ENVIRONMENT=production  BUILD_STEPS='compile test'
+        os: linux
+      - node_js: 10
+        env:  NODE_ENVIRONMENT=production  BUILD_STEPS='compile test'
+        os: osx
       - node_js: 8
         env:  NODE_ENVIRONMENT=production  BUILD_STEPS='compile test'
         os: linux
