--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
   "presets": [
-    ["env", { "node": "6.0.0" }]
+    [
+      "env",
+      {
+        "targets": { "node": "6.0.0" }
+      }
+    ]
   ],
   "plugins": [
     "transform-object-assign",
