--- a/CHANGES.yaml
+++ b/CHANGES.yaml
@@ -7,15 +7,6 @@ Releases:
       Patch a few other dependencies to the latest versions. Also removes source maps support
       from the published code so that it can run more easily in browsers.
     changes:
-      - type: minor
-        description: Support execution in browsers by removing source map support from published code.
-        commits: [8ccdceafcfdc55f02fd61d49f53b7ebe0e0ab73f]
-        issuesAddressed:
-          - id: '#8'
-            link: https://github.com/mearns/extrinsic-promises/issues/8
-      - type: patch
-        description: Update to latest sinon version
-        commits: [0d704bd609ee9c9f5306c0a86ee2fa16b347b78f]
       - type: patch
         description: Remove compromised version of event-stream dev dependency
         commits: [4bef505d7d36593f28c961d760c7a1e462bed94d]
@@ -25,6 +16,21 @@ Releases:
         deprecates:
           - version: '<2.1.0'
             explanation: Prior versions include a malware package as a transitive dev-dependency in flatmap-stream v0.1.1.
+      - type: minor
+        description: Support execution in browsers by removing source map support from published code.
+        commits: [8ccdceafcfdc55f02fd61d49f53b7ebe0e0ab73f, be66f1c5ba70160652e19117c680f3bf7a9345c5]
+        issuesAddressed:
+          - id: '#8'
+            link: https://github.com/mearns/extrinsic-promises/issues/8
+      - type: patch
+        description: Update to latest versions of sinon, chai, and sinon-chai dev dependencies.
+        commits: [0d704bd609ee9c9f5306c0a86ee2fa16b347b78f, d35c4265e17bf4d5b486aa919e7658055129c70c]
+      - type: minor
+        description: >-
+          Ensure we're targeting node v6 for transpilation so it actually works in that version. This
+          is probably a no-op because it should have already worked back to that version, based on CI testing.
+          But this will ensure it does for good measure.
+        commits: [cfeb4466da2e5dc0c606bdcd29dd7078d1ee0c22]
   - release: 6
     version: 2.0.0
     date: 2018-10-10
