Add files section to package.json to reduce bundle size
Lets be real explicit about what needs to be included.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "reactive",
     "callback"
   ],
+  "files": [
+    "dist/src/index.js"
+  ],
   "main": "dist/src/index.js",
   "scripts": {
     "clean": "rimraf coverage/ .nyc_output/ dist/",
