--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,16 @@ language: node_js
 matrix:
   include:
       - node_js: node
-        env:  NODE_ENVIRONMENT=development BUILD_STEPS='compile test'
+        env:  NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
         os: linux
       - node_js: node
-        env:  NODE_ENVIRONMENT=development BUILD_STEPS='compile test'
+        env:  NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
+        os: osx
+      - node_js: 11
+        env:  NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
+        os: linux
+      - node_js: 11
+        env:  NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
         os: osx
       - node_js: 10
         env:  NODE_ENVIRONMENT=production  BUILD_STEPS='compile test'
