--- a/CHANGES.yaml
+++ b/CHANGES.yaml
@@ -1,6 +1,20 @@
 PreRelease:
   changes: []
 Releases:
+  - release: 9
+    version: 2.3.0
+    date: 2020-05-12
+    description: >-
+      Just some dev depenency audit issues and update supported node engines to include node 12.
+    changes:
+      - type: minor
+        description: Update supported engines to include node v12.
+        commits: [945e278d072436ea2ffbb9befc968a28a5c69859]
+      - type: patch
+        description: Updates several dependencies, including some high-sev and moderate-sev audit alerts.
+        securityIssuesAddresses:
+          - link: https://github.com/advisories/GHSA-vh95-rmgr-6w4m
+            summary: minimist before 1.2.2 could be tricked into adding or modifying properties of Object.prototype using a "constructor" or "proto" payload.
   - release: 8
     version: 2.2.0
     date: 2019-10-07
