Update dev dependencies to latest

--- a/package.json
+++ b/package.json
@@ -75,37 +75,38 @@
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-eslint": "8.0.1",
+    "babel-eslint": "10.1.0",
     "babel-plugin-node-source-map-support": "0.0.1",
     "babel-plugin-transform-object-assign": "6.22.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.7.0",
-    "chai": "4.2.0",
+    "chai": "4.3.4",
     "chai-as-promised": "7.1.1",
-    "copyfiles": "1.2.0",
-    "cross-env": "5.2.0",
-    "if-env": "1.0.0",
+    "copyfiles": "2.4.1",
+    "cross-env": "7.0.3",
+    "if-env": "1.0.4",
     "lfsr": "0.0.3",
-    "mocha": "5.2.0",
-    "npm-package-json-lint": "2.11.0",
-    "npm-run-all": "4.1.1",
-    "nyc": "14.1.1",
-    "ramda": "0.25.0",
-    "remark-cli": "7.0.0",
-    "rimraf": "2.6.2",
-    "sinon": "7.2.2",
-    "sinon-chai": "3.3.0",
-    "snazzy": "7.0.0",
-    "source-map-support": "0.5.9",
-    "standard": "10.0.3",
-    "stryker": "0.33.2",
-    "stryker-api": "0.22.1",
-    "stryker-babel-transpiler": "0.7.11",
+    "moch": "0.0.1",
+    "mocha": "8.3.2",
+    "npm-package-json-lint": "5.1.0",
+    "npm-run-all": "4.1.5",
+    "nyc": "15.1.0",
+    "ramda": "0.27.1",
+    "remark-cli": "9.0.0",
+    "rimraf": "3.0.2",
+    "sinon": "10.0.0",
+    "sinon-chai": "3.6.0",
+    "snazzy": "9.0.0",
+    "source-map-support": "0.5.19",
+    "standard": "16.0.3",
+    "stryker": "0.35.1",
+    "stryker-api": "0.24.1",
+    "stryker-babel-transpiler": "0.10.1",
     "stryker-baseline-reporter": "1.0.3",
-    "stryker-html-reporter": "0.16.10",
-    "stryker-javascript-mutator": "0.12.2",
-    "stryker-mocha-framework": "0.13.3",
-    "stryker-mocha-runner": "0.15.3",
-    "yaml-lint": "1.0.0"
+    "stryker-html-reporter": "0.18.1",
+    "stryker-javascript-mutator": "0.14.1",
+    "stryker-mocha-framework": "0.15.1",
+    "stryker-mocha-runner": "0.17.1",
+    "yaml-lint": "1.2.4"
   }
 }
