--- a/package.json
+++ b/package.json
@@ -10,35 +10,21 @@
     "callback"
   ],
   "files": [
-    "dist/src/index.js"
+    "src/index.js"
   ],
-  "main": "dist/src/index.js",
+  "main": "src/index.js",
   "scripts": {
     "clean": "rimraf coverage/ .nyc_output/ dist/",
-    "check:lint:ci:yaml": "yamllint .travis.yml",
-    "check:lint:ci": "npm-run-all --parallel check:lint:ci:*",
+    "check:lint:ci": "yamllint .travis.yml",
     "check:lint:changes": "yamllint CHANGES.yaml",
-    "check:lint:readme:markdown": "remark --no-stdout README.md",
-    "check:lint:readme": "npm-run-all --parallel check:lint:readme:*",
-    "check:lint:js:root": "standard ./*.js | snazzy",
-    "check:lint:js:src": "standard src/**/*.js | snazzy",
-    "check:lint:js:test": "standard test/**/*.js | snazzy",
-    "check:lint:js:npmpackagejsonlint-config": "standard ./npmpackagejsonlint.config.js | snazzy",
-    "check:lint:js:stryker-config": "standard ./stryker.conf.js | snazzy",
-    "check:lint:js": "npm-run-all --parallel check:lint:js:*",
-    "check:lint:package-json": "pjl-cli",
+    "check:lint:readme": "remark --no-stdout README.md",
+    "check:lint:js": "eslint --max-warnings 0 --no-error-on-unmatched-pattern --format codeframe ./ src/ test/ \"./*.js\"",
     "check:lint": "npm-run-all --parallel check:lint:*",
     "check": "npm-run-all --parallel check:*",
     "test": "nyc mocha ./test/src/**/*.spec.js",
     "verify": "npm-run-all check test",
     "mutation-test": "stryker run",
-    "compile-prod:app": "babel src/ --out-dir dist/src/",
-    "compile-dev:app": "babel src/ --out-dir dist/src/ --plugins node-source-map-support --source-maps inline",
-    "compile-dev:test": "babel test/ --out-dir dist/test/ --plugins node-source-map-support --source-maps inline",
-    "compile:nop": "echo \"there are no common compile tasks defined, no problem.\"",
-    "compile-prod": "npm-run-all compile-prod:* compile:*",
-    "compile-dev": "npm-run-all compile-dev:* compile:*",
-    "compile": "if-env NODE_ENV=production && npm run compile-prod || npm run compile-dev",
+    "compile": "echo \"Nothing to compile, babel has been removed: OK.\"",
     "build": "npm-run-all clean compile verify",
     "prepublishOnly": "cross-env NODE_ENV=production npm run build"
   },
@@ -60,9 +46,6 @@
       "text",
       "lcov"
     ],
-    "require": [
-      "babel-core/register"
-    ],
     "include": [
       "src/**"
     ],
@@ -74,39 +57,28 @@
     "lines": 70
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-eslint": "10.1.0",
-    "babel-plugin-node-source-map-support": "0.0.1",
-    "babel-plugin-transform-object-assign": "6.22.0",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.7.0",
     "chai": "4.3.4",
     "chai-as-promised": "7.1.1",
-    "copyfiles": "2.4.1",
     "cross-env": "7.0.3",
-    "if-env": "1.0.4",
-    "lfsr": "0.0.3",
-    "moch": "0.0.1",
+    "eslint": "7.23.0",
+    "eslint-config-mearns": "git+https://github.com/mearns/eslint-config-mearns.git#v0.3.0",
     "mocha": "8.3.2",
-    "npm-package-json-lint": "5.1.0",
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
-    "ramda": "0.27.1",
+    "prettier": "1.19.1",
+    "pretty-quick": "3.1.0",
     "remark-cli": "9.0.0",
     "rimraf": "3.0.2",
     "sinon": "10.0.0",
     "sinon-chai": "3.6.0",
-    "snazzy": "9.0.0",
-    "source-map-support": "0.5.19",
-    "standard": "16.0.3",
     "stryker": "0.35.1",
     "stryker-api": "0.24.1",
-    "stryker-babel-transpiler": "0.10.1",
     "stryker-baseline-reporter": "1.0.3",
     "stryker-html-reporter": "0.18.1",
     "stryker-javascript-mutator": "0.14.1",
     "stryker-mocha-framework": "0.15.1",
     "stryker-mocha-runner": "0.17.1",
     "yaml-lint": "1.2.4"
-  }
+  },
+  "dependencies": {}
 }
