--- a/.travis.yml
+++ b/.travis.yml
@@ -1,54 +1,25 @@
 language: node_js
 
-matrix:
-  include:
-    - node_js: node
-      env: NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
-      os: linux
-    - node_js: node
-      env: NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
-      os: osx
-    - node_js: 15
-      env: NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
-      os: linux
-    - node_js: 15
-      env: NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
-      os: osx
-    - node_js: 14
-      env: NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
-      os: linux
-    - node_js: 14
-      env: NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
-      os: osx
-    - node_js: 13
-      env: NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
-      os: linux
-    - node_js: 13
-      env: NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
-      os: osx
-    - node_js: 12
-      env: NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
-      os: linux
-    - node_js: 12
-      env: NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
-      os: osx
-    - node_js: 11
-      env: NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
-      os: linux
-    - node_js: 11
-      env: NODE_ENVIRONMENT=production BUILD_STEPS='compile test'
-      os: osx
-    - node_js: 10
-      env: NODE_ENVIRONMENT=production  BUILD_STEPS='compile test'
-      os: linux
-    - node_js: 10
-      env: NODE_ENVIRONMENT=production  BUILD_STEPS='compile test'
-      os: osx
+os:
+  - linux
+  - osx
+
+node_js:
+  - node
+  - 15
+  - 14
+  - 13
+  - 12
+  - 11
+  - 10
+  - 9
+  - 8
+  - 7
+  - 6
 
 cache:
   directories:
     - node_modules
 
 script:
-  - if [ "${TRAVIS_EVENT_TYPE}" = "cron" ]; then npm run build; fi
-  - if [ "${TRAVIS_EVENT_TYPE}" != "cron" ]; then for step in ${BUILD_STEPS}; do echo "*** Running build step $step"; npm run $step; done; fi
+  - npm run ci-best
