--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 optional = false
 save-exact = true
-registry = http://registry.npmjs.org/
+registry = https://registry.npmjs.org/
+legacy-peer-deps = true
